--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>Lintang - React Email</title>
+    <title>React & jsPDF</title>
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.css">
     
     <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.js"></script>
